@@ -618,6 +618,10 @@
 #define IDS_CONFIRM_SINGLE_COPY         17639
 #define IDS_CONFIRM_MULTIPLE_COPY       17640
 #define IDS_DIRCMP_NOTSYNC              17641
+#define IDS_CONFIRM_SINGLE_MOVE         17642
+#define IDS_CONFIRM_MULTIPLE_MOVE       17643
+#define IDS_CONFIRM_COPY_CAPTION        17644
+#define IDS_CONFIRM_MOVE_CAPTION        17645
 #define ID_DIR_OPEN_LEFT                17648
 #define ID_DIR_OPEN_LEFT_WITHEDITOR     17649
 #define ID_DIR_OPEN_LEFT_WITH           17650
